--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@ img {
 			<div class="collapse navbar-collapse" id="main-menu">
 			   <ul class="nav navbar-nav navbar-right">
 			   	
-				<li><a href="#About Me"><b>About Me</b></a></li>
-				<li><a href="#Publications"><b>Publications</b></a></li>
-				<li><a href="#Achievemnets"><b>Achievement</b></a></li>
-				<li><a href="#Projects"><b>Projects</b></a></li>
-				<li><a href="#Professional"><b>Professional Activities</b></a></li>
-				<li><a href="#Contact"><b>Contact Me</b></a></li>
+				<li><a href="#About Me"><b><font color="#333399">About Me</b></a></li>
+				<li><a href="#Publications"><b><font color="#333399">Publications</b></a></li>
+				<li><a href="#Achievemnets"><b><font color="#333399">Achievement</b></a></li>
+				<li><a href="#Projects"><b><font color="#333399">Projects</b></a></li>
+				<li><a href="#Professional"><b><font color="#333399">Professional Activities</b></a></li>
+				<li><a href="#Contact"><b><font color="#333399">Contact Me</b></a></li>
 				
 				&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 				   &nbsp&nbsp<img src="Achyut1.jpg" alt="" width="140" height="140",align="right">
