--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 					
 					<center>"उद्यमेन हि सिध्यन्ति कार्याणि न मनोरथैः। न हि सुप्तस्य सिंहस्य प्रविशन्ति मुखे मृगाः।।"<br> </center>
 					<!--<img src="Achyut.jpg" alt="" width="140" height="140",align="left"><br><hr>-->
-					<h2><b>About Me:</h2><br>
+					<h2><b>About Me (मेरा परिचय):</h2><br>
 
 					<font size="4">नमस्कार! I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati (IIT-Guwahati), Assam, India. 
 						<br>My Research Interests Include:<br><font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
