--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ img {
 					
 					<center>"उद्यमेन हि सिध्यन्ति कार्याणि न मनोरथैः। न हि सुप्तस्य सिंहस्य प्रविशन्ति मुखे मृगाः।।"<br> </center>
 					<!--<img src="Achyut.jpg" alt="" width="140" height="140",align="left"><br><hr>-->
-					<h2><b>About Me (मेरा परिचय):</h2><br>
+					<h2><b>About Me:</h2><br>
 
 					<font size="4">नमस्कार! I Am Achyut Mani Tripathi. I Obtained My Ph.D.(2021) from The Department of Computer Science & Engineering at Indian Institute of Technology Guwahati (IIT-Guwahati), Assam, India. 
 						<br>My Research Interests Include:<br><font color="#333399"> Deep Learning for Environmental Sound Classification, Adversarial Attacks on Deep Models, Knowledge Distillation for Deep Learning and Anomaly Detection in Time Series.</font></font><hr>
@@ -77,7 +77,7 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-<li><font color="red"> 6 May 2022: A Journal Paper Titled "When Sub-Band Features Meet Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study  
+<li><font color="green"> 6 May 2022: A Journal Paper Titled "When Sub-Band Features Meet Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study  
 " is Accepted to Applied Acoustic Journal, Elsevier						
 
 					      				 
