--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
 
-<body style="background-color: AliceBlue ;">
+<body style="background-color: white ;">
 	<style>
 img {
   border-radius: 80%;
