--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
+<li><font color="green"> 20 May 2022: A Journal Paper Titled "An Empirical Study of Adversarial Attacks on Environmental Sound
+Classification: An Empirical Study  
+" is Accepted to Applied Acoustic Journal, Elsevier							
 <li><font color="green"> 6 May 2022: A Journal Paper Titled "When Sub-Band Features Meet Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study  
-" is Accepted to Applied Acoustic Journal, Elsevier						
+" is Accepted to Applied Acoustic Journal, Elsevier	
+	
 
 					      				 
 							 </font>
@@ -105,7 +109,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 <li> <font color="blue">Achyut Mani Tripathi</font>, "On Robustness of MLP-Mixer Models Against Adversarial
 Attacks For Image Classification", Neurocomputing, Elsevier,  <font color="red">Under Review </font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
-Classification", Applied Acoustic, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+Classification", Applied Acoustic, <font color="red">Accepted </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Accepted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, Vol.489, Page 59-77, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
