--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>	
-<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Swarup Ranjan Behera, Konark Paul,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>		
