--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>						
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", Applied Acoustic, <font color="red">Accepted </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
-<li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Accepted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification", Appplied Acoustic, Elsevier, Vol.195, Page.108813, 2022, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, Vol.489, Page 59-77, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
