--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@ Classification: An Empirical Study  
 	<li> Senthilmurugan S, Rashmi Dutta Baruah, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju, Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, "A System
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well Drilling".</li></ul><hr>
 <h3><font color="red"><b>Journals</b></font><br></h3><hr>
-<ul>	
+<ul>
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Patch Aware Contrastive Learning for An Audio MLP-Mixer, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide and Distill: A New Outlooks On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>														
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>						
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
