--- a/index.html
+++ b/index.html
@@ -77,11 +77,7 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-<li><font color="green"> 20 May 2022: A Journal Paper Titled "An Empirical Study of Adversarial Attacks on Environmental Sound
-Classification: An Empirical Study  
-" is Accepted to Applied Acoustic Journal, Elsevier							
-<li><font color="green"> 6 May 2022: A Journal Paper Titled "When Sub-Band Features Meet Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study  
-" is Accepted to Applied Acoustic Journal, Elsevier	
+<li><font color="green"> 14 June 2022: A Conference Paper Titled "Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification" is Accepted to Conference of the International Speech Communication Association (INTERSPEECH)-2022							
 	
 
 					      				 
@@ -123,7 +119,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Divide, Distill and Enhance: Online Knowledge Distillation for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
-<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Accepted] <font color="red">[Core Rank=A*]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
