--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-
+<li><font color="blue">Achyut Mani Tripathi </font> ,"A Lighweight Deep Model for Textless Audio Question Answering Using Divide and Distillation Technique", IEEE International Conference on Acoustics, Speech and Signal Processing(ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>		
+<li><font color="blue">Achyut Mani Tripathi </font> ,"An Evaluation of Visual Attention Mechnisms for Textless Audio Question Answering: An Empirical Study", IEEE International Conference on Acoustics, Speech and Signal Processing(ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>	
+<li><font color="blue">Achyut Mani Tripathi </font>, "Adversarial Textless Audio Question Answering Dataset", IEEE International Conference on Acoustics, Speech and Signal Processing(ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>	
+<li><font color="blue">Achyut Mani Tripathi </font>, "Textless Audio Question Answering", IEEE International Conference on Acoustics, Speech and Signal Processing(ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Accepted] <font color="red">[Core Rank=A*]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
