--- a/index.html
+++ b/index.html
@@ -118,7 +118,15 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
+<li><font color="blue">Achyut Mani Tripathi, Swarup Ranjan Behera </font> ,"Spectrogram Patch Matters: Knowledge Distillation for An Environmental Sound Classification Using An Influence Score-Based Technique", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>
+		
+<li><font color="blue">Achyut Mani Tripathi, Swarup Ranjan Behera </font> ,"Divide, Design and Distillation (3D Distillation): Knowledge Distillation for An Environmental Sound Classification", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>	
+		
+<li><font color="blue">Achyut Mani Tripathi, Swarup Ranjan Behera </font> ,"An Evaluation of Visual Attention Mechanisms for Textless Audio Question Answering (T-AQA): An Empirical Study", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>	
 
+<li><font color="blue">Achyut Mani Tripathi, Swarup Ranjan Behera </font>, "Adversarial Textless Audio Question Answering (AT-AQA) Dataset", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>	
+
+<li><font color="blue">Achyut Mani Tripathi, Swarup Ranjan Behera </font>, "Textless Audio Question Answering (T-AQA) Dataset", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Accepted] <font color="red">[Core Rank=A*]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
