--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ img {
 	<h3><font color="red"><b>Patents</b></font><br></h3><ul><hr>
 	<li> Senthilmurugan S, Rashmi Dutta Baruah, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju, Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, "A System
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well Drilling".</li></ul><hr>
-<h3><font color="red"><b>Journals</b></font><br></h3><hr>
+<h3><font color="red"><b>Refereed Journal Articles</b></font><br></h3><hr>
 <ul>
 	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide and Distill: New Outlooks On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>														
@@ -116,7 +116,7 @@ Applied Acoustics, Elsevier, 108183, Vol.182, 2021. <font color="red">[H-index=5
 <li><font color="blue">Achyut Mani Tripathi</font>, Rashmi Dutta Baruah, Senthilmurugan S, "Oil Well Drilling Activities Recognition Using
 a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, Vol.196, 2021. <font color="red">[H-index=74, Impact Factor=5.168]</font></li>
 </ul><hr>
-<h3><font color="red"><b>Conferences</b></font><br></h3><hr>
+<h3><font color="red"><b>Refereed Conference</b></font><br></h3><hr>
 <ul>
 <li><font color="blue">Achyut Mani Tripathi</font>, Swarup Ranjan Behera,"Spectrogram Patch Matters: Knowledge Distillation for An Environmental Sound Classification Using An Influence Score-Based Technique", IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 2023, [Submitted] <font color="red">[Core Rank=A*]</font></li><hr>
 		
@@ -229,7 +229,7 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 	<h2><b> Reviewer :<br></h2><hr>
 	<ul>
 		<li>  IEEE/ACM Transactions on Audio, Speech, and Language Processing (IEEE TASLP)
-		<li> Neurocomputing, a Elsevier Journal
+		<li> Neurocomputing, an Elsevier Journal
 		<li> IEEE International Joint Conference on Neural Networks (IJCNN)
 		<li> Artificial Intelligence Review, a Springer Journal
 		<li> SN Computer Science, a Springer Journal 
@@ -254,6 +254,7 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 		<li>Email: t.achyut@iitg.ac.in</li>
 		<li><a href="https://github.com/achyutmani">Github Profile</a></li>
 		<li><a href="https://www.linkedin.com/in/achyut-mani-tripathi-24823b183/">Linkedin Profile</a></li>
+		<li><a href="https://scholar.google.com/citations?user=i0reLQMAAAAJ&hl=en&oi=ao">Google Scholar</a></li>
 		<li><a href="https://dblp.org/pid/173/8904.html">DBLP Profile</a></li>
 		           
                                         
