--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 <ul>
 	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide and Distill: New Outlooks On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>														
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>						
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">(Major Revision Submitted) </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>						
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "Adversarial Attacks on Environmental Sound Classification: An
 Empirical Study", Applied Acoustics, <font color="red">Accepted </font>, <font color="red">[H-index=53, Impact Factor=3.614]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification", Appplied Acoustics, Elsevier, Vol.195, Page.108813, 2022, <font color="red">[H-index=53, Impact Factor=3.614]</font></li><hr>
