--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 <h3><font color="red"><b>Refereed Journal Articles</b></font><br></h3><hr>
 <ul>
 	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide and Distill: New Outlooks On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>														
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide and Distill: New Outlooks On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">(Major Revision Submitted)</font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>														
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">(Major Revision Submitted) </font>, <font color="red">[H-index=66, Impact Factor=4.364]</font></li><hr>						
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "Adversarial Attacks on Environmental Sound Classification: An
 Empirical Study", Applied Acoustics, <font color="red">Accepted </font>, <font color="red">[H-index=53, Impact Factor=3.614]</font></li><hr>
