--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 		<li> Artificial Intelligence Review, a Springer Journal
 		<li> SN Computer Science, a Springer Journal 
 		<li> Applied Intelligence, a Springer Journal 
-		<li> Springer Nature, a Springer Journal	
+		<li> Springer Nature, a Springer Journal
+		<li> Neural Processing Letters, a Springer Journal
 					
 			
 		
